Fix: wrap labels of advanced options for small devices

--- a/src/pages/settings/advanced/advanced.scss
+++ b/src/pages/settings/advanced/advanced.scss
@@ -6,6 +6,9 @@ page-advanced {
       display: flex;
       align-items: center;
       padding-bottom: 2rem;
+      ion-label {
+        white-space: normal;
+      }
     }
     span {
       color: color($colors, grey);
